<resources>
    <string name="title_activity_login_acivity">LoginAcivity</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too shohort, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">ClgBook</string>
    <string name="title_activity_login">Sign in</string>
    <string name="btn_login">LOGIN</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="login_button_mainactivity">Sign in</string>
    <string name="guest_button_mainactivity">Guest</string>
    <string name="title_activity_home_l">Home</string>
    <string name="logout">Log out</string>
    <string name="title_activity_main2"> </string>
    <string name="share">Share</string>
    <string name="post_desc">Post Description</string>
    <string name="post_image">Add Images</string>
    <string name="post_heading">Post Title</string>
    <string name="name">Name</string>
    <string name="organisation">Organisation</string>
    <string name="hint_profile_pic">profile picture</string>
    <string name="add_post">Add Post</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_fullName">Full Name</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>


    <string name="title_activity_home_g">HomeActivityG</string>
    <string name="timestamp">TimeStamp</string>
    <string name="settings_menu">Settings</string>
    <string name="edit_menu">Edit</string>
    <string name="share_menu">Share</string>
    <string name="delete_menu">Delete</string>
    <string name="send_to">share</string>
    <string name="clas">Class</string>
    <string name="roll_no">Roll No.</string>
    <string name="hint_Div">Division or Class</string>
    <string name="hint_roll">Roll no.</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="hint_email">Email</string>
    <string name="forgot_password_click_here">Forgot password? Click here!</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="load">Load</string>
    <string name="your_activities_are">Your Activities are:</string>
    <string name="textview">TextView</string>
</resources>
