<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@drawable/border"
    android:maxWidth="420dp"
    android:minWidth="300dp"
    android:minHeight="300dp">
    <!--name & profile & organisation-->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/post_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pro_pic"
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:adjustViewBounds="true"
                android:hint="@string/hint_profile_pic"
                android:paddingBottom="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_check_circle"
                tools:ignore="ContentDescription"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:fontFamily="sans-serif"
                android:hint="@string/timestamp"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/org"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/organisation"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:fontFamily="sans-serif"
                android:hint="@string/name"
                android:maxLines="2"
                android:textColor="@color/lbl_name"
                android:textSize="21sp" />
        </LinearLayout>

    </LinearLayout><!--name & profile & organisation END--><!--post-title  & post description & upload image -->

    <TextView
        android:id="@+id/post_title"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/post_heading"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle=""
        app:layout_constraintBottom_toTopOf="@+id/post_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/post_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="10dp"
        android:autoSizeTextType="uniform"
        android:ellipsize="end"
        android:hint="@string/post_desc"
        android:maxLength="5000"
        android:maxLines="1000"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/post_pic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_desc"
        android:layout_margin="4dp"
        android:adjustViewBounds="true"
        android:background="@drawable/border"
        android:hint="@string/post_image"
        android:paddingTop="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_add_a_photo_black_48dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_desc" />

</android.support.constraint.ConstraintLayout>