<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3b4148"
    tools:context=".AddPost">

    <EditText
        android:id="@+id/post_title"
        android:layout_width="400dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/post_heading"
        android:inputType="text"
        android:textColor="#000"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/post_desc"
        android:layout_width="390dp"
        android:layout_height="200dp"
        android:layout_below="@+id/post_title"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="top|start"
        android:hint="@string/post_desc"
        android:inputType="textLongMessage|textMultiLine|text"
        android:scrollHorizontally="false"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_title" />

    <ImageButton
        android:id="@+id/post_pic"
        android:layout_width="280dp"
        android:layout_height="260dp"
        android:layout_below="@+id/post_desc"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/post_image"
        android:paddingTop="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_add_a_photo_black_48dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_desc"
        tools:ignore="ContentDescription" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_editor_absoluteX="300dp"
        app:layout_editor_absoluteY="500dp"
        app:maxImageSize="60dp"
        app:srcCompat="@drawable/ic_upload_white_48dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:background="#3b4148"
        android:popupBackground="#000"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />


    <ProgressBar
        android:id="@+id/upload_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="260dp"
        android:layout_height="18dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/post_pic"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="@+id/post_pic"
        app:layout_constraintTop_toBottomOf="@+id/post_pic"
        android:focusable="true" />

</android.support.constraint.ConstraintLayout>